tests/architecture/fixtures/invalid/layer-boundaries/application-dynamic-react-query.ts
export const loadQuery = () => import("@tanstack/react-query");
